Add condition to Smart HVAC blueprint to ensure automation only runs in temperature control modes (heat, cool, heat_cool). This enhances the logic for triggering actions based on thermostat state, improving overall functionality and reliability.

--- a/smart-hvac.yaml
+++ b/smart-hvac.yaml
@@ -246,6 +246,9 @@ conditions:
             entity_id: !input thermostat
             attribute: preset_mode
             state: "vacation"
+  # Only runs automation if thermostat is in a temperature control mode (heat, cool, or heat_cool)
+  - condition: template
+    value_template: "{{ states(thermostat_entity) in ['heat', 'cool', 'heat_cool'] }}"
 
   # Verifies that both day and night sensors are providing valid readings.
   - condition: template
