Enhance Smart HVAC blueprint with consolidated sensor validation logic and improved safety checks. Introduced a new variable for sensor validation, ensuring automation halts if conditions are not met. Updated debug notifications for clearer insights into sensor status and temperature adjustments, improving user experience and troubleshooting capabilities.

--- a/smart-hvac.yaml
+++ b/smart-hvac.yaml
@@ -250,36 +250,23 @@ conditions:
   - condition: template
     value_template: "{{ states(thermostat_entity) in ['heat', 'cool', 'heat_cool'] }}"
 
-  # Combined sensor validation in a single condition
-  - condition: template
-    value_template: >
-      {% set day_s = day_target_sensor_entity %}
-      {% set night_s = night_target_sensor_entity %}
-      {% set day_state = states[day_s] %}
-      {% set night_state = states[night_s] %}
-      {% set timeout_seconds = sensor_timeout_hours * 3600 %}
-
-      {% if day_state is none or day_state.state in ['unknown', 'unavailable', 'none'] or
-         night_state is none or night_state.state in ['unknown', 'unavailable', 'none'] %}
-        {{ false }}
-      {% else %}
-        {% set day_temp = day_state.state | float(-99) %}
-        {% set night_temp = night_state.state | float(-99) %}
-
-        {% set temp_valid = day_temp >= min_temp_limit_value and
-                           night_temp >= min_temp_limit_value and
-                           day_temp <= max_temp_limit_value and
-                           night_temp <= max_temp_limit_value %}
-
-        {% set data_fresh = (now() - day_state.last_updated).total_seconds() < timeout_seconds and
-                           (now() - night_state.last_updated).total_seconds() < timeout_seconds %}
-
-        {{ temp_valid and data_fresh }}
-      {% endif %}
-
 actions:
+  # Early safety check – aborts execution (with optional debug) if sensor validation fails
   - choose:
-      # Weather-enabled path
+      - conditions: "{{ not sensors_valid }}"
+        sequence:
+          - choose:
+              - conditions: "{{ debug_notifications_enabled }}"
+                sequence:
+                  - service: persistent_notification.create
+                    data:
+                      title: "Smart Thermostat – Safety Check Failed"
+                      message: >
+                        Safety check failed. Skipping automation run.\n\nDay sensor ({{ day_target_sensor_entity }}): {{ states(day_target_sensor_entity) }}\nNight sensor ({{ night_target_sensor_entity }}): {{ states(night_target_sensor_entity) }}\nData freshness (seconds): Day {{ (now() - states[day_target_sensor_entity].last_updated).seconds }}, Night {{ (now() - states[night_target_sensor_entity].last_updated).seconds }}\nValid temperature range: {{ min_temp_limit_value }}–{{ max_temp_limit_value }}°C
+          - stop: "Safety check failed – automation halted"
+
+  # Weather-enabled path
+  - choose:
       - conditions: "{{ is_weather_available }}"
         sequence:
           # --- WEATHER ENABLED PATH ---
@@ -759,29 +746,33 @@ actions:
           - service: persistent_notification.create
             data:
               title: "Smart Thermostat DEBUG {{ 'ON' if is_weather_available else 'OFF' }}"
-              message: >
-                Time: {{ current_hour | round(1) }}h
-                Temperatures: Desired: {{ desired_temp }}°C | Current: {{ current_target_temp }}°C | Diff: {{ temp_difference }}°C
-                Mode: {{ thermostat_mode }} | Needed: {{ needed_mode }}
-                Current Range: {{ current_target_low }}-{{ current_target_high }}°C
+              message: |-
+                **Time:** {{ current_hour | round(1) }} h
+                **Desired / Current / Δ:** {{ desired_temp }} °C / {{ current_target_temp }} °C / {{ temp_difference }} °C
+                **Mode:** {{ thermostat_mode }} → **Needed:** {{ needed_mode }}
+                **Range:** {{ current_target_low }} – {{ current_target_high }} °C
 
                 {% if is_weather_available %}
-                Weather: Outdoor: {{ current_outdoor_temp }}°C | Condition: {{ current_condition }}
-                Thermal Analysis: Solar Impact: {{ solar_impact }} | House Thermal Mass: {% if building_thermal_contribution == 'warming' %}Heating Up{% elif building_thermal_contribution == 'cooling' %}Cooling Down{% else %}Stable{% endif %}
-                Natural Temperature Trend: {% if natural_trend == 'warming' %}Getting Warmer{% elif natural_trend == 'cooling' %}Getting Cooler{% else %}Stable{% endif %} | Feels Like: {{ feels_like_temp|round(1) }}°C
-                {% if current_humidity != "unknown" %}Humidity: {{ current_humidity|round(1) }}% | {% endif %}Indoor-Outdoor Difference: {{ (desired_temp - current_outdoor_temp) | round(1) }}°C
+                **Weather**
+                • Outdoor: {{ current_outdoor_temp | round(1) }} °C ({{ current_condition }})
+                • Solar impact: {{ solar_impact }}
+                • Thermal mass: {% if building_thermal_contribution == 'warming' %}Heating Up{% elif building_thermal_contribution == 'cooling' %}Cooling Down{% else %}Stable{% endif %}
+                • Trend: {% if natural_trend == 'warming' %}Getting Warmer{% elif natural_trend == 'cooling' %}Getting Cooler{% else %}Stable{% endif %}
+                • Feels like: {{ feels_like_temp|round(1) }} °C
+                {% if current_humidity != "unknown" %}• Humidity: {{ current_humidity|round(1) }} %{% endif %}
+                • Indoor-Outdoor Δ: {{ (desired_temp - current_outdoor_temp) | round(1) }} °C
                 {% else %}
-                Weather Integration: Off
+                **Weather Integration:** Off
                 {% endif %}
 
                 {% set low_change = new_target_low|float - current_target_low|float %}
                 {% set high_change = new_target_high|float - current_target_high|float %}
                 {% if low_change != 0 or high_change != 0 %}
-                Action: Adjusting setpoints → New Range: {{ new_target_low }}-{{ new_target_high }}°C
-                {% if low_change != 0 %}Heat: {{ current_target_low }} → {{ new_target_low }} ({{ low_change|round(1) }}°C){% endif %}
-                {% if high_change != 0 %}Cool: {{ current_target_high }} → {{ new_target_high }} ({{ high_change|round(1) }}°C){% endif %}
+                **Action:** Adjusting setpoints → {{ new_target_low }} – {{ new_target_high }} °C
+                {% if low_change != 0 %}• Heat: {{ current_target_low }} → {{ new_target_low }} ({{ low_change|round(1) }} °C){% endif %}
+                {% if high_change != 0 %}• Cool: {{ current_target_high }} → {{ new_target_high }} ({{ high_change|round(1) }} °C){% endif %}
                 {% else %}
-                Action: No temperature adjustment needed
+                **Action:** No temperature adjustment needed
                 {% endif %}
 
 variables:
@@ -898,4 +889,29 @@ variables:
       -0.5
     {% else %}
       0
+    {% endif %}
+
+  # Variable for consolidated sensor validation logic
+  sensors_valid: >
+    {% set day_s = day_target_sensor_entity %}
+    {% set night_s = night_target_sensor_entity %}
+    {% set day_state = states[day_s] %}
+    {% set night_state = states[night_s] %}
+    {% set timeout_seconds = sensor_timeout_hours * 3600 %}
+
+    {% if day_state is none or day_state.state in ['unknown', 'unavailable', 'none'] or
+          night_state is none or night_state.state in ['unknown', 'unavailable', 'none'] %}
+      false
+    {% else %}
+      {% set day_temp = day_state.state | float(-99) %}
+      {% set night_temp = night_state.state | float(-99) %}
+
+      {% set temp_valid = day_temp >= min_temp_limit_value and
+                          night_temp >= min_temp_limit_value and
+                          day_temp <= max_temp_limit_value and
+                          night_temp <= max_temp_limit_value %}
+
+      {% set data_fresh = (now() - day_state.last_updated).total_seconds() < timeout_seconds and
+                          (now() - night_state.last_updated).total_seconds() < timeout_seconds %}
+      {{ temp_valid and data_fresh }}
     {% endif %}
