--- a/smart-hvac.yaml
+++ b/smart-hvac.yaml
@@ -616,15 +616,9 @@ actions:
           - variables:
               # Calculate the new heating setpoint
               calculated_low: >-
-                {% if temp_difference < -0.5 %}
-                  {# Room is colder than desired, potentially raise heating setpoint #}
-                  {% if offset_adjustment > 0 %}
-                    {{ ((current_target_low + offset_adjustment|abs) * 2) | round / 2 }}
-                  {% else %}
-                    {{ current_target_low }}
-                  {% endif %}
+                {% if offset_adjustment > 0 %}
+                  {{ ((current_target_low + offset_adjustment|abs) * 2) | round / 2 }}
                 {% elif temp_difference > 0.5 and natural_trend == 'warming' %}
-                  {# Room is warmer than desired AND warming trend, potentially lower heating setpoint #}
                   {% if weather_adjustment_for_range|float < 0 %}
                     {{ ((current_target_low + weather_adjustment_for_range) * 2) | round / 2 }}
                   {% else %}
@@ -637,15 +631,9 @@ actions:
           - variables:
               # Calculate the new cooling setpoint
               calculated_high: >-
-                {% if temp_difference > 0.5 %}
-                  {# Room is warmer than desired, potentially lower cooling setpoint #}
-                  {% if offset_adjustment < 0 %}
-                    {{ ((current_target_high + offset_adjustment) * 2) | round / 2 }}
-                  {% else %}
-                    {{ current_target_high }}
-                  {% endif %}
+                {% if offset_adjustment < 0 %}
+                  {{ ((current_target_high + offset_adjustment) * 2) | round / 2 }}
                 {% elif temp_difference < -0.5 and natural_trend == 'cooling' %}
-                  {# Room is colder than desired AND cooling trend, potentially raise cooling setpoint #}
                   {% if weather_adjustment_for_range|float > 0 %}
                     {{ ((current_target_high + weather_adjustment_for_range) * 2) | round / 2 }}
                   {% else %}
@@ -740,12 +728,8 @@ actions:
       - variables:
           # Calculate the new heating setpoint
           calculated_low: >-
-            {% if temp_difference < -0.5 %}
-              {% if offset_adjustment > 0 %}
-                {{ ((current_target_low + offset_adjustment|abs) * 2) | round / 2 }}
-              {% else %}
-                {{ current_target_low }}
-              {% endif %}
+            {% if offset_adjustment > 0 %}
+              {{ ((current_target_low + offset_adjustment|abs) * 2) | round / 2 }}
             {% else %}
               {{ current_target_low }}
             {% endif %}
@@ -753,12 +737,8 @@ actions:
       - variables:
           # Calculate the new cooling setpoint
           calculated_high: >-
-            {% if temp_difference > 0.5 %}
-              {% if offset_adjustment < 0 %}
-                {{ ((current_target_high + offset_adjustment) * 2) | round / 2 }}
-              {% else %}
-                {{ current_target_high }}
-              {% endif %}
+            {% if offset_adjustment < 0 %}
+              {{ ((current_target_high + offset_adjustment) * 2) | round / 2 }}
             {% else %}
               {{ current_target_high }}
             {% endif %}
@@ -1017,17 +997,20 @@ variables:
     {% else %}
       {{ thermostat_mode }}
     {% endif %}
-  # Calculates a standard temperature adjustment offset. If the temperature is off by
-  # more than 0.5° from the desired temp, it creates a 0.5° adjustment to correct it.
+  # Calculates an adaptive temperature offset. Nudges are ±0.5 °C at most and only
+  # occur when the room drifts outside the permitted band:
+  #   max( low set-point , desired-0.5 )  ≤  room temp  ≤  min( high set-point , desired+0.5 )
   offset_adjustment: >
-    {% set diff = temp_difference %}
-    {% if diff <= -0.5 %}
-      0.5
-    {% elif diff >= 0.5 %}
+    {%- set band_low  = [ current_target_low , (desired_temp - 0.5) ] | max -%}
+    {%- set band_high = [ current_target_high, (desired_temp + 0.5) ] | min -%}
+
+    {%- if current_target_temp > band_high -%}
       -0.5
-    {% else %}
+    {%- elif current_target_temp < band_low -%}
+      0.5
+    {%- else -%}
       0
-    {% endif %}
+    {%- endif -%}
 
   # Variable for consolidated sensor validation logic
   sensors_valid: >
